<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">OhMyfriends</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="walk_route">步行路线</string>
    <string name="bus_route">公交路线</string>
    <string name="drive_route">驾车路线</string>
	<string name="search_hint">输入目的地或者在地图上选择</string>
	<string name="search">搜索</string>
	<string name="begin">出发</string>
	<string name="end">到达</string>
	<string name="back">返回</string>
	<string name="route_name">路线名称</string>
	<string name="map_select">地图选点</string>
	<string name="transit">公交</string>
	<string name="drive">驾车</string>
	<string name="walk">步行</string>
	<string name="my_location">我的位置</string>
	<string name="save">保存</string>
	<string name="iwillgo">我要去</string>
	<string name="have_not_arrived">没去过</string>
	<string name="have_arrived">去过</string>
	<string name="name">名称</string>
	<string name="edit">编辑</string>
	<string name="delete">删除</string>
	<string name="set_location">选择地点</string>
	<string name="start_time">出发时间</string>
	<string name="dayly_remind">每日提醒</string>
	<string name="call_friends">选择好友</string>
	<string name="finish">完成</string>
	<string name="cancel">取消</string>
	<string name="wheretogo">您要去哪？</string>
	<string name="readytogo">准备去%1$s</string>
	<string name="ontheway">在去%1$s的路上</string>
	<string name="update">更新</string>
	<string name="create">新路线</string>
	<string name="login">登录</string>
	<string name="logout">注销</string>
	<string name="register">注册</string>
	<string name="username">用户名</string>
	<string name="password">密码</string>	
	<string name="nickname">昵称</string>	
	<string name="commit">提交</string>	
	<string name="meet">聚会</string>	
	<string name="contacts">联系人</string>	
	<string name="map">地图</string>	
	<string name="setting">设置</string>
	<string name="addFriend">添加好友</string>
	<string name="startMeeting">发起聚会</string>
	<string name="searchFriend">查找好友</string>
	<string name="typeFriendID">请输入好友ID</string>
	<string name="confirmAddFriend">加好友</string>
	<string name="selectFriends">请在列表中选择好友</string>
	<string name="travel_plan">出行方式</string>
	<string name="meet_time">出行方式</string>
	<string name="switch_view">切换</string>
</resources>
