<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <Button
        android:id="@+id/button_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="6dp"
        android:text="@string/edit" />
    
     <TextView
        android:id="@+id/textView_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
		android:layout_centerHorizontal="true"
		android:layout_marginTop="10dip"
        android:text="@string/name" />
    
        <Button
        android:id="@+id/button_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="6dp"
        android:text="@string/delete" />


    <EditText
        android:id="@+id/editText_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textView_name"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/button_set_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dip"
        android:text="@string/set_location" />

        <TextView
        android:id="@+id/textView_start_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button_set_location"
        android:layout_marginTop="20dip"
        android:layout_alignParentLeft="true"
        android:layout_centerHorizontal="true"
        android:text="@string/start_time" />

   		 <EditText
        android:id="@+id/editText_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
         android:layout_below="@+id/textView_start_time"
        android:ems="10" />
    
        <CheckBox
        android:id="@+id/checkBox_dayly_remind"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/editText_time"
        android:layout_alignParentRight="true"
        android:text="@string/dayly_remind" />

    <Button
        android:id="@+id/button_call_friends"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText_time"
        android:layout_marginTop="28dp"
        android:layout_centerHorizontal="true"
        android:text="@string/call_friends" />


    <Button
        android:id="@+id/button_finish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="6dp"
        android:layout_marginBottom="10dp"
        android:text="@string/finish" />

    <Button
        android:id="@+id/button_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="6dp"
        android:layout_marginBottom="10dp"
        android:text="@string/cancel" />

</RelativeLayout>
