<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
     <TextView
         android:id="@+id/plan_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="10dip"
         android:text="@string/name" />

    <EditText
        android:id="@+id/input_plan_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/plan_name"
        android:layout_marginLeft="16dip"
        android:layout_marginRight="16dip"
        android:layout_marginTop="16dp"
        android:ems="10" >

        <requestFocus />
    </EditText>

        <TextView
        android:id="@+id/textView_start_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/set_location"
        android:layout_marginTop="20dip"
        android:layout_alignParentLeft="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="16dip"
        android:text="@string/start_time" />

   		 <EditText
        android:id="@+id/editText_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
         android:layout_below="@+id/textView_start_time"
         android:layout_marginLeft="16dip"
        android:ems="10" />
    
        <CheckBox
        android:id="@+id/checkBox_dayly_remind"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/editText_time"
        android:layout_alignBottom="@+id/editText_time"
        android:layout_alignParentRight="true"
        android:layout_marginRight="16dip"
        android:text="@string/dayly_remind" />

    <TextView
        android:id="@+id/posName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/set_location"
        android:layout_alignBottom="@+id/set_location"
        android:layout_alignLeft="@+id/textView_start_time"
        android:text="TextView" />

    <Button
        android:id="@+id/set_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/input_plan_name"
        android:layout_below="@+id/input_plan_name"
        android:layout_marginTop="16dp"
        android:text="@string/set_location" />

    <Button
        android:id="@+id/call_friends"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/checkBox_dayly_remind"
        android:layout_below="@+id/editText_time"
        android:layout_marginTop="51dp"
        android:text="@string/call_friends" />

    <TextView
        android:id="@+id/friendsName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/call_friends"
        android:layout_alignBottom="@+id/call_friends"
        android:layout_alignLeft="@+id/editText_time"
        android:text="TextView" />

    <Button
        android:id="@+id/finish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/friendsName"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="14dp"
        android:text="@string/finish" />

    <Button
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/finish"
        android:layout_alignRight="@+id/call_friends"
        android:text="@string/cancel" />

</RelativeLayout>
