<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
	 >

        <Button
            android:id="@+id/addFriend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:text="@string/addFriend" />

        <Button
            android:id="@+id/startMeeting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="@string/startMeeting" />
	 	
    </RelativeLayout>

   	<Button
   	    android:id="@+id/finish_set_friends"
   	    android:layout_width="wrap_content"
   	    android:layout_height="wrap_content"
   	    android:layout_alignParentBottom="true"
   	    android:text="@string/finish" 
   	    android:visibility="gone"/>

   	<Button
   	    android:id="@+id/cancel_set_friends"
   	    android:layout_width="wrap_content"
   	    android:layout_height="wrap_content"
   	    android:layout_alignBaseline="@+id/finish_set_friends"
   	    android:layout_alignParentRight="true"
   	    android:text="@string/cancel" 
   	    android:visibility="gone"/>
   	
   	   	<ListView
   	    android:id="@+id/friends"
   	    android:layout_width="match_parent"
   	    android:layout_height="match_parent"
   	    android:layout_below="@id/header" 
   	    android:layout_above="@id/finish_set_friends"
   	    >

   	</ListView>

</RelativeLayout>
