<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

        <TextView
        android:id="@+id/userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="10dp"
        android:text="@string/username" />
        <EditText
        android:id="@+id/inputUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/userName"
        android:layout_toRightOf="@+id/userName"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/userName"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:text="@string/password" />
    
    <EditText
        android:id="@+id/inputPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/password"
        android:layout_alignLeft="@+id/inputUserName"
        android:ems="10"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/password"
        android:layout_marginLeft="29dp"
        android:layout_marginTop="68dp"
        android:text="@string/login" />

    <Button
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
         android:layout_alignBaseline="@+id/login"
        android:layout_centerHorizontal="true"
        android:text="@string/register"/>

    <Button
        android:id="@+id/logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/login"
        android:layout_alignParentRight="true"
        android:layout_marginRight="29dp"
        android:text="@string/logout"/>

    <ImageButton
        android:id="@+id/login_qq"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login"
        android:layout_marginTop="48dp"
        android:layout_marginLeft="20dp"
        android:src="@drawable/ic_login_qq" />

</RelativeLayout>
