<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >



    <TextView
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="30dp"
        android:text="@string/username" />
    
        <EditText
        android:id="@+id/inputUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/username"
        android:layout_toRightOf="@+id/username"
        android:ems="10"
        />

        <TextView
        android:id="@+id/nickname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/username"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="45dp"
        android:layout_marginLeft="15dp"
        android:text="@string/nickname" />    
        
    <EditText
        android:id="@+id/inputNickname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/nickname"
        android:layout_toRightOf="@+id/nickname"
        android:layout_alignLeft="@+id/inputUserName"
        android:ems="10" >
    </EditText>



    <TextView
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nickname"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="45dp"
        android:layout_marginLeft="15dp"
        android:text="@string/password" />

    <EditText
        android:id="@+id/inputPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/password"
        android:layout_toRightOf="@+id/password"
        android:layout_alignLeft="@+id/inputUserName"
        android:ems="10"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/commit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:layout_centerHorizontal="true"
         android:layout_below="@+id/password"
        android:text="@string/commit" />

</RelativeLayout>