<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <Button
        android:id="@+id/searchFriend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/input_friendID"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="32dp"
        android:text="@string/searchFriend" />

    <Button
        android:id="@+id/cancelSearchFriend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/searchFriend"
        android:layout_alignBottom="@+id/searchFriend"
        android:layout_alignRight="@+id/input_friendID"
        android:text="@string/cancel" />

    <TextView
        android:id="@+id/userNameAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/input_friendID"
        android:layout_alignLeft="@+id/input_friendID"
        android:layout_marginBottom="58dp"
        android:text="@string/typeFriendID" />

    <EditText
        android:id="@+id/input_friendID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="158dp"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/search_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/input_friendID"
        android:layout_centerVertical="true" />

</RelativeLayout>
